# PDHCG-II

./: .clang-format  .codespell-ignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml
.github/workflows/disabled/: build.yml  clang-format.yml  ruff.yml  spell-check.yml
distributed/: distributed_ops_real.cu  distributed_ops_stub.c  distributed_solver.cu  distributed_solver.h  distributed_types.h  distributed_utils.cu  distributed_utils.h
docs/: C_API.md  citation.md  examples.md  index.md  installation.md
docs/c/: functions.md  overview.md  types.md
docs/python/: model.md  parameters.md  quickstart.md
include/: cupdlpx_types.h  mps_parser.h  pdhcg.h  pdhcg_types.h  presolve_wrapper.h
internal/: cusparse_compat.h  distributed_interface.h  internal_types.h  pdhcg_kernels.cuh  pdhcg_mv_backend.cuh  pdhg_core_op.h  permute.h  preconditioner.h  presolve.h  solver.h  solver_state.h  spmv_backend.h  utils.h
pdhcg/: _pdhcg_core.pyi
python/: README.md
python/pdhcg/: PDHCG.py  __init__.py  _core.py  model.py
python_bindings/: CMakeLists.txt  _core_bindings.cpp
src/: cli.c  cupdlpx.c  mps_parser.c  pdhcg.c  pdhcg_kernels.cu  pdhg_core_op.cu  permute.cu  preconditioner.c  presolve.c  presolve_wrapper.c  solver.cu  solver_state.cu  spmv_backend.cu  utils.cu
test/: test_pdhcg_python.py
