[build-system]
requires = ["scikit-build-core>=0.9.0", "pybind11>=2.11.0", "numpy", "scipy"]
build-backend = "scikit_build_core.build"

[project]
name = "pdhcg"
version = "0.0.1"
description = "Python bindings for PDHCG, GPU accelerated first order solver for Quadratic Programming"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [
  { name = "Hongpei Li" },
  { name = "Yicheng Huang" },
  { name = "Huikang Liu" },
  { name = "Dongdong Ge" },
  { name = "Yinyu Ye" }
]
dependencies = ["numpy>=1.21", "scipy>=1.8"]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.version = ">=3.20"
cmake.build-type = "Release"
wheel.packages = ["python/pdhcg"]
sdist.include = ["tests/**", "pyproject.toml", "README.md", "LICENSE"]

[tool.scikit-build.cmake.define]
CMAKE_CUDA_ARCHITECTURES = "all"
CMAKE_CUDA_STANDARD = "17"
PDHCG_BUILD_PYTHON = "ON"
PDHCG_BUILD_STATIC_LIB = "ON"
PDHCG_BUILD_SHARED_LIB = "OFF"
PDHCG_BUILD_CLI = "OFF"
PDHCG_BUILD_TESTS = "OFF"

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-cov>=4",
  "numpy",
  "scipy"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """
-q
-ra
--strict-markers
--maxfail=1
--cov=pdhcg
--cov-report=term-missing
--cov-report=xml
"""
markers = [
  "gpu: requires a CUDA-capable GPU"
]
xfail_strict = true
filterwarnings = [
  "error::FutureWarning",
]

[tool.coverage.run]
branch = true
source = ["pdhcg"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true